--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   test-merge:
+    runs-on: ubuntu-latest
     steps:
       - name: View context attributes
         uses: actions/github-script@v6
