--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-
+  pull_request:
 
 jobs:
   test-merge:
@@ -13,3 +13,13 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: console.log(context)
+
+      - name: View context attributes
+        uses: actions/github-script@v6
+        with:
+          script: console.log(context.repo)
+
+      - name: View context attributes
+        uses: actions/github-script@v6
+        with:
+          script: console.log(github.issue)
