Add test workflow

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -6,8 +6,9 @@ on:
       - main
   workflow_dispatch:
     inputs:
-      type: environment
-      required: true
+      environment:
+        type: environment
+        required: true
 
 jobs:
   test-merge:
