--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -29,12 +29,19 @@ jobs:
         with:
           script: console.log(github.issue)
 
+      - name: Stuff 
+        run: |
+          echo "${{ github.event.head_commit.message }}"
+          echo ${{ github.event.head_commit.message }}
+          echo -n "${{ github.event.head_commit.message }}"
+
       - name: Guess PR
-        run:
+        run: |
           echo "PRNUM=$(echo '${{ github.event.head_commit.message }}' | sed 's/.*#\([0-9]*\).*/\1/g')" >> $GITHUB_ENV
 
     
       - uses: actions/github-script@v6
+        if: ${{ env.PRNUM != "" }}
         with:
           script: |
             github.rest.issues.createComment({
