--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -41,7 +41,6 @@ jobs:
 
     
       - uses: actions/github-script@v6
-        if: ${{ env.PRNUM != "" }}
         with:
           script: |
             github.rest.issues.createComment({
@@ -50,3 +49,4 @@ jobs:
               repo: context.repo.repo,
               body: '👋 Thanks for reporting!'
             })
+        if: ${{ env.PRNUM != '' }}
