--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -32,9 +32,7 @@ jobs:
       - name: Stuff 
         run: |
           echo '${{toJSON(github.event.head_commit)}}' | jq '.message'
-          #echo "${{ github.event.head_commit.message }}"
-          #echo ${{ github.event.head_commit.message }}
-          #echo -n "${{ github.event.head_commit.message }}"
+          echo '${{ github.event.head_commit.message }}' | sed 's/.*#\([0-9]*\).*/\1/g'
 
       - name: Guess PR
         run: |
