--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -29,15 +29,10 @@ jobs:
         with:
           script: console.log(github.issue)
 
-      - name: Stuff 
-        run: |
-          echo '${{toJSON(github.event.head_commit)}}' | jq '.message' | sed 's/.*#\([0-9]*\).*/\1/g'
-
       - name: Guess PR
         run: |
-          echo "PRNUM=$(echo '${{ github.event.head_commit.message }}' | sed 's/.*#\([0-9]*\).*/\1/g')" >> $GITHUB_ENV
+          echo "PRNUM=$( ${{toJSON(github.event.head_commit)}}' | jq '.message' | sed 's/.*#\([0-9]*\).*/\1/g' )" >> $GITHUB_ENV
 
-    
       - uses: actions/github-script@v6
         with:
           script: |
