--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -31,8 +31,11 @@ jobs:
 
       - name: Guess PR
         run: |
-          echo "PRNUM=$( ${{toJSON(github.event.head_commit)}}' | jq '.message' | sed 's/.*#\([0-9]*\).*/\1/g' )" >> $GITHUB_ENV
+          echo "PRNUM=$( echo '${{toJSON(github.event.head_commit)}}' | jq '.message' | sed 's/.*#\([0-9]*\).*/\1/g' )" >> $GITHUB_ENV
 
+          echo "PRNUM=$(echo '${{ github.event.head_commit.message }}' | sed 's/.*#\([0-9]*\).*/\1/g')" >> $GITHUB_ENV
+
+    
       - uses: actions/github-script@v6
         with:
           script: |
