--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -28,13 +28,47 @@ jobs:
         with:
           script: console.log( "${{ github.event }}" )
 
-  merge_job:
+  
+  merge_job1:
+
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true 
     runs-on: ubuntu-latest
     steps:
-    - run: |
-        echo PR #${{ github.event.number }} has been merged to ${{ github.head_ref }}
+      - run: |
+          echo PR #${{ github.event.number }} has been merged to ${{ github.head_ref }}
+
+      - uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 About to deploy see https://github.com/${{github.repository}}/actions/runs/${{github.run_id}} !'
+            })
+
+
+  merge_job2:
+    environment:
+      name: atest
+
+    # this job will only run if the PR has been merged
+    if: github.event.pull_request.merged == true 
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo PR #${{ github.event.number }} has been merged to ${{ github.head_ref }}
+
+      - uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '👋 Deploying!'
+            })
 
   close_job:
     # this job will only run if the PR has been closed without being merged
