--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,9 +1,9 @@
 name: Deploy Terraform
 on: 
 #  pull_request:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   workflow_dispatch:
     inputs:
       environment:
