--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -53,6 +53,9 @@ jobs:
     environment:
       name: atest
 
+    needs:
+      - merge_job1
+
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true 
     runs-on: ubuntu-latest
