--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,9 +1,9 @@
 name: Deploy Terraform
 on: 
 #  pull_request:
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       environment:
@@ -36,7 +36,7 @@ jobs:
 
       - name: Guess PR
         run: |
-          export PR=$( echo '${{ fromJSON(github.event.head_commit).message  }}' | sed 's/.*#\([0-9]*\).*/\1/g' )
+          export PR=$( echo '${{ toJSON(github.event.head_commit.message) }}' | sed 's/.*#\([0-9]*\).*/\1/g' )
           #export PR=$( echo '${{toJSON(github.event.head_commit)}}' | jq '.message' | sed 's/.*#\([0-9]*\).*/\1/g' )
           echo "PRNUM=${PR}" >> $GITHUB_ENV
 
