Make sure we are merging to main

--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -57,7 +57,8 @@ jobs:
       - merge_job1
 
     # this job will only run if the PR has been merged
-    if: ${{ github.event.pull_request.merged == true && github.event.pull_request.base.ref == "main" }}
+    #if: ${{ github.event.pull_request.merged == true && github.event.pull_request.base.ref == "main" }}
+    if: ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
       - run: |
