--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -68,7 +68,7 @@ jobs:
 
     # this job will only run if the PR has been merged
     #if: ${{ github.event.pull_request.merged == true && github.event.pull_request.base.ref == "main" }}
-    if: ${{ github.event.pull_request.merged == true }}
+    if: ${{ github.event.pull_request.merged == true && github.base_ref == "main" }}
     runs-on: ubuntu-latest
     steps:
       - run: |
