--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -41,6 +41,9 @@ jobs:
 
   merge_job1:
 
+    concurrency:
+      group: mergetest1
+
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true 
     runs-on: ubuntu-latest
@@ -63,6 +66,9 @@ jobs:
     environment:
       name: atest
 
+    concurrency:
+      group: mergetest1
+        
     needs:
       - merge_job1
 
@@ -72,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo PR #${{ github.event.number }} has been merged to ${{ github.head_ref }}
+          echo PR #${{ github.event.number }} has been merged from ${{ github.head_ref }} to ${{ github.base_ref }}
 
       - uses: actions/github-script@v6
         with:
