--- a/.github/workflows/workflowreuse.yml
+++ b/.github/workflows/workflowreuse.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         target: [a,b,c]
-    uses: .github/workflows/on-close.yml@main
+    uses: ./.github/workflows/on-close.yml
     secrets: inherit
     with:
       target: ${{ matrix.target }}
