--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -46,8 +46,8 @@ jobs:
 
 
   merge_job1:
-    concurrency:
-      group: mergetest1
+    #concurrency:
+    #  group: mergetest1
 
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true 
@@ -71,8 +71,8 @@ jobs:
     environment:
       name: atest
 
-    concurrency:
-      group: mergetest1
+    #concurrency:
+      #group: mergetest1
         
     needs:
       - merge_job1
