--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -49,7 +49,6 @@ jobs:
     #concurrency:
     #  group: mergetest1
 
-
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true 
     runs-on: ubuntu-latest
@@ -80,7 +79,7 @@ jobs:
 
     # this job will only run if the PR has been merged
     #if: ${{ github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' }}
-    if: ${{ github.event.pull_request.merged == true && github.base_ref == 'main' }}
+    #if: ${{ github.event.pull_request.merged == true && github.base_ref == 'main' }}
     runs-on: ubuntu-latest
     steps:
       - run: |
