--- a/.github/workflows/on-close.yml
+++ b/.github/workflows/on-close.yml
@@ -50,7 +50,7 @@ jobs:
     #  group: mergetest1
 
     # this job will only run if the PR has been merged
-    if: github.event.pull_request.merged == true 
+    #if: github.event.pull_request.merged == true 
     runs-on: ubuntu-latest
     steps:
       - run: |
